# imessages_ai_analyzer

./: README.md  env.example  pyproject.toml
src/cqc_iaa/: main.py
src/cqc_iaa/fonts/: Arial-Unicode-Bold-Italic.pkl  Arial-Unicode-Bold.pkl  Arial-Unicode-Italic.pkl  Arial-Unicode-MS.pkl
